package Modele;

public enum Indice {
    ABSENT,
    BIEN_PLACE,
    MAL_PLACE;
}
