package Modele;

public enum Pion {
	ROUGE,
	VERT,
	BLEU,
	VIOLET,
	MARRON,
	ORANGE,
	NOIR,
	BLANC;
}
