package Vue;

import Modele.LigneIndice;

import javax.swing.*;

interface IndiceStrategie {
    public JPanel ajoutIndice(LigneIndice ligne_indice);
}
